# altamino.py

./: README.md  pyproject.toml  setup.py
altamino/: __init__.py
altamino/api/: __init__.py  auth.py  base.py
altamino/api/_async/: __init__.py  altteam.py  auth.py  chats.py  communities.py
altamino/api/_async/sub/: __init__.py  adm.py  altacm.py  blogs.py  chats.py  users.py
altamino/api/_sync/: __init__.py  auth.py  chats.py
altamino/api/_sync/sub/: chats.py
altamino/clients/: client.py  sub_client.py
altamino/clients/_async/: client.py  sub_client.py
altamino/objects/: proxy.py
altamino/objects/args/: __init__.py  administrators_rank.py  client_types.py  object_types.py  proxy.py  strike_time.py  ws_event_types.py
altamino/objects/resp/: __init__.py  account.py  auth.py  base_object.py  blogs.py  chat.py  comments.py  event.py  user_profile.py
altamino/utils/: __init__.py  constants.py  exceptions.py  generators.py  logger.py  requester.py  state.py
altamino/ws/: __init__.py  actions.py  handler.py  router.py  socket.py
altamino/ws/_async/: actions.py  handler.py  router.py  socket.py
